--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -345,7 +345,7 @@
 
                     <div class="col-auto">
                         <div class="d-flex justify-content-start">
-                            <a style="white-space: nowrap;" href="#" onclick="showhideColorRange('color-{{ entry.uniquesvg }}', this); return false;" class="seqcolor">Show annotations</a>&nbsp;<div><button type="button" class="btn btn-outline-primary btn-sm save disabled" id="save-{{ entry.uniquesvg }}" disabled>Save</button></div>
+                            <a style="white-space: nowrap;" href="#" onclick="showhideColorRange('color-{{ entry.uniquesvg }}', this); return false;" class="seqcolor">Show annotation tools</a>&nbsp;<div><button type="button" class="btn btn-outline-primary btn-sm save disabled" id="save-{{ entry.uniquesvg }}" disabled>Save</button></div>
                         </div>
                     </div>
                 </div>
@@ -415,30 +415,43 @@
                     </div>
 
                     <div class="container border border-dark rounded mt-2 mb-2 p-2 bg-light text-nowrap ">
-                        Notes about this tree:
+                        Comments:
                         <div style="width: 50%;" {% if 'change_project' in context_perms %} class="notes" {% endif %} id="notes-{{ entry.uniquesvg }}"></div>
                     </div>
 
                 </div>
                 <!-- End Annotations -->
-
-
-                <!-- Legend for Sequences by count of duplicates -->
-                <div id="slider-range-legend-container-{{ entry.uniquesvg }}" class="hide">
-                    Sequences marked by count of duplicates:<br>
-                    <span id="slider-range-legend-min-{{ entry.uniquesvg }}"></span>
-                    <div class="slider-range-legend rounded border border-dark" id="slider-range-legend-{{ entry.uniquesvg }}"></div>
-                    <span id="slider-range-legend-max-{{ entry.uniquesvg }}"></span>
+                
+                <!-- Legend section -->
+                <div class="container rounded border border-primary border-2 bg-light w-100 mb-2 hide" id="legends-{{ entry.uniquesvg }}">
+                    <div class="row">
+                    <!-- Sequence Field Legend -->
+                    <div class="col">
+                        <div class="hide" id="name_colors_by_field_legend_container-{{ entry.uniquesvg }}">
+                            Sequence name colors for <span id="name_colors_by_field_legend_field-{{ entry.uniquesvg }}"></span>
+                            <div id="name_colors_by_field_legend-{{ entry.uniquesvg }}"></div>
+                        </div>
+                    </div>
+                    <!-- Legend for Duplicates -->
+                    <div class="col">
+                        <div id="slider-range-legend-container-{{ entry.uniquesvg }}" class="hide">
+                            Sequences marked by count of duplicates:<br>
+                            <span id="slider-range-legend-min-{{ entry.uniquesvg }}"></span>
+                            <div class="slider-range-legend rounded border border-dark" id="slider-range-legend-{{ entry.uniquesvg }}"></div>
+                            <span id="slider-range-legend-max-{{ entry.uniquesvg }}"></span>
+                        </div>
+                        {% if entry.iscolored == "true" %}
+                            <script>
+                                $(document).ready(function() {
+                                    setSequenceCountLegend("{{ entry.uniquesvg }}", true);
+                                });
+                            </script>
+                        {% endif %}
+                    </div>
+                    <!-- End Duplicates Legend -->
                 </div>
-                {% if entry.iscolored == "true" %}
-                    <script>
-                        $(document).ready(function() {
-                            setSequenceCountLegend("{{ entry.uniquesvg }}");
-                        });
-                    </script>
-                {% endif %}
-                <!-- End Legend -->
-
+                </div>
+                <!-- End legends section -->
 
                 <div class="magnifybar">
                     <button type="button" class="fullsize btn btn-outline-secondary btn-sm" id="full-{{ entry.uniquesvg }}"> Full</button>
