--- a/phylobook/static/css/phylobook.css
+++ b/phylobook/static/css/phylobook.css
@@ -465,3 +465,8 @@ img {
     /* padding-right: 10px; */
     font-weight: normal;
 }
+
+.lineage_subtitle{
+    font-size: 16px;
+    font-style: italic;
+}
