--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -347,7 +347,7 @@
                     <div class="col-auto">
                         <div class="d-flex justify-content-start">
                             <a style="white-space: nowrap;" href="#" onclick="showhideColorRange('color-{{ entry.uniquesvg }}', this); return false;" class="seqcolor">Show annotation tools</a>
-                            &nbsp;&nbsp;<div><button type="button" class="btn btn-outline-primary btn-sm mb-2 disabled" id="extract_to_file-{{ entry.uniquesvg }}" onclick="downloadLineagesByColor('{{ entry.uniquesvg }}'); return false;" disabled>Extract to File</button></div>
+                            &nbsp;&nbsp;<div><button type="button" class="btn btn-outline-primary btn-sm mb-2" id="extract_to_file-{{ entry.uniquesvg }}" onclick="downloadLineagesByColor('{{ entry.uniquesvg }}'); return false;">Extract to File</button></div>
                             &nbsp;&nbsp;<div><button type="button" class="btn btn-outline-primary btn-sm save disabled" id="save-{{ entry.uniquesvg }}" disabled>Save</button></div>
                         </div>
                     </div>
@@ -428,7 +428,7 @@
 
                     <!-- Assign lineage names by color -->
                     <div class="container border border-dark rounded mt-2 mb-2 p-2 text-nowrap bg-light">
-                        <button type="button" class="btn btn-info btn-sm text-nowrap disabled" id="set_lineage_names-{{ entry.uniquesvg }}"  onclick="setLineagesByColor('{{ entry.uniquesvg }}'); return false;" disabled>Assign lineage names by color</button>
+                        <button type="button" class="btn btn-info btn-sm text-nowrap" id="set_lineage_names-{{ entry.uniquesvg }}"  onclick="setLineagesByColor('{{ entry.uniquesvg }}'); return false;">Assign lineage names by color</button>
                     </div>
                         
                     <br>
